--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -6,8 +6,8 @@
     height: 100%;
     background: #fff;
     box-shadow: 2px 2px 50px rgb(204, 204, 204);
-    overflow: scroll;
     overflow-x: hidden;
+    overflow-y: scroll;
 
     h2 {
         padding: 2rem;
@@ -44,13 +44,13 @@
     scrollbar-width: thin;
     scrollbar-color: rgba(155,155,155,0.5) transparent;
 }
-*::webkit-scrollbar {
+*::-webkit-scrollbar {
     width: 5px;
 }
-*::webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
     background: transparent;
 }
-*::webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
     background-color: rgba(155,155,155,0.5);
     border-radius: 20px;
     border: transparent;
