--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,3 +1,11 @@
+.library-icon {
+    position: absolute;
+    top: 2rem;
+    right: 2rem;
+    font-size: 2.5rem;
+    cursor: pointer;
+}
+
 .player {
     min-height: 25vh;
     display: flex;
