--- a/src/styles/_library.scss
+++ b/src/styles/_library.scss
@@ -27,7 +27,8 @@
     align-items: center;
     padding: 1rem 2rem;
     cursor: pointer;
-
+    transition: background 0.5s ease;
+    
     img {
         width: 30%;
     }
@@ -66,4 +67,10 @@
     background-color: rgba(155,155,155,0.5);
     border-radius: 20px;
     border: transparent;
+}
+
+@media screen and (max-width: 992px) {
+    .library {
+        width: 100%;
+    }
 }
