--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -33,3 +33,13 @@
         cursor: pointer;
     }
 }
+
+@media screen and (max-width: 992px) {
+    .time-control {
+        width: 90%;
+    }
+
+    .play-control {
+        width: 80%;
+    }
+}
