--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -19,3 +19,11 @@
     }
 }
 
+@media screen and (max-width: 992px) {
+    .song-container {
+        img {
+            width: 60%;
+        }
+    }
+}
+
