--- a/src/styles/_player.scss
+++ b/src/styles/_player.scss
@@ -1,37 +1,63 @@
+.container {
+    margin: auto;
+    max-width: 480px;
+    min-height: 60vh;
+    display: flex;
+    flex-direction: column;
+    border-radius: 50px;
+    box-shadow: 2px 2px 30px rgba(112, 112, 112, 0.237);
+}
+
 .player {
-    min-height: 25vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
 }
 
 .time-control {
-    width: 50%;
+    width: 95%;
     display: flex;
+    flex-direction: column;
+    padding: 0.5rem 2.5rem;
+    margin-top: 1rem;
 
     input {
         width: 100%;
-        padding: 1rem 0;
         cursor: pointer;
     }
 
-    p{
-        padding: 1rem;
+    .time {
+        display: flex;
+        justify-content: space-between;
+
+        p {
+            padding: 0.5rem;
+        }
     }
 }
 
 .play-control {
-    margin-top: 1rem;
+    width: 100%;
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    padding: 1rem;
-    width: 25%;
+    justify-content: center;
+    gap: 4rem;
+    font-size: 3rem;
+    padding: 1rem 0 3rem 0;
 
     svg {
         cursor: pointer;
+        color: #282828;
+        transition: all 0.5s ease;
+
+        &:hover {
+            color: rgb(29, 29, 29);
+        }
     }
+}
+
+.volume-slider {
+    cursor: pointer;
 }
 
 @media screen and (max-width: 992px) {
