--- a/src/styles/_song.scss
+++ b/src/styles/_song.scss
@@ -1,21 +1,24 @@
 .song-container {
-    min-height: 65vh;
+    // min-height: 65vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
 
     img {
-        width: 20%;
+        width: 300px;
         border-radius: 50%;
+        margin: 2rem 0;
     }
 
     h2 {
-        padding: 3rem 1rem 1rem 1rem;
+        font-weight: 800;
+        font-size: 2rem;
+        padding: 0.5rem 0;
     }
-
+    
     h3{
-        font-size: 1rem;
+        font-size: 1.5rem;
     }
 }
 
